--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jsdoc": "^3.6.10",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.0",
+    "mongoose-sequence": "^5.3.1",
     "puppeteer": "^13.1.3"
   }
 }
