--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "inspector": "^0.5.0",
     "jest": "^27.4.7",
     "jsdoc": "^3.6.10",
     "mongodb": "^4.3.1",
