--- a/package.json
+++ b/package.json
@@ -2,15 +2,35 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "inspector": "^0.5.0",
     "jest": "^27.4.7",
     "jsdoc": "^3.6.10",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.0",
     "mongoose-sequence": "^5.3.1",
-    "node-sessionstorage": "^1.0.0",
     "puppeteer": "^13.1.3"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "tiendavinilos",
+  "description": "enlaces bootstrap",
+  "version": "1.0.0",
+  "main": "scrapper.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gcataladordal/tiendaVinilos.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gcataladordal/tiendaVinilos/issues"
+  },
+  "homepage": "https://github.com/gcataladordal/tiendaVinilos#readme"
 }
