--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
+  "name": "tiendavinilos",
+  "version": "1.0.0",
+  "description": "enlaces bootstrap",
+  "main": "scrapper.js",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
-    "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "express": "^4.17.2",
     "inspector": "^0.5.0",
     "jest": "^27.5.0",
     "jsdoc": "^3.6.10",
@@ -12,5 +16,21 @@
     "mongoose": "^6.2.0",
     "mongoose-sequence": "^5.3.1",
     "puppeteer": "^13.1.3"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gcataladordal/tiendaVinilos.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gcataladordal/tiendaVinilos/issues"
+  },
+  "homepage": "https://github.com/gcataladordal/tiendaVinilos#readme"
 }
