--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.0",
     "mongoose-sequence": "^5.3.1",
+    "nodemailer": "^6.7.2",
     "pdfkit": "^0.13.0",
     "puppeteer": "^13.1.3"
   }
