--- a/package.json
+++ b/package.json
@@ -14,5 +14,25 @@
     "nodemailer": "^6.7.2",
     "pdfkit": "^0.13.0",
     "puppeteer": "^13.1.3"
-  }
+  },
+  "scripts": {
+    "test": "jest",
+    "start": "node server.js",
+    "doc": "jsdoc -c jsdoc.json"
+  },
+  "name": "tiendavinilos",
+  "description": "enlaces bootstrap",
+  "version": "1.0.0",
+  "main": "scrapper.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gcataladordal/tiendaVinilos.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gcataladordal/tiendaVinilos/issues"
+  },
+  "homepage": "https://github.com/gcataladordal/tiendaVinilos#readme"
 }
